# AI-Assistant-Service-Menu

./: .gitignore  README.md  config.sh  install.sh  kcm-launch.sh  ollama.service  opencode-context.desktop  opencode-launch.sh  terminal-launch.sh  test.sh  uninstall.sh  zenity-config.sh
kcm/: CMakeLists.txt  kcm_ai_assistant.cpp  kcm_ai_assistant.h  kcm_ai_assistant.json  resources.qrc
